welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: not found: value etMondeHauteur
			setPos(j,etMondeHauteur-1-j)
                                 ^