welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var suce = 0;
override def run() {
	for(i<- 0 to getMondeHauteur-1){
		for(j<- 0 to i){
			setPos(j,i-j)
			ecritMessage(suce)
			suce+=1
			
		}
			
	}
	for(i<- 0 to getMondeHauteur-1){
		for(j<- getMondeHauteur-2 to i){
			setPos(j,etMondeHauteur-1-j)
			ecritMessage(suce)
			suce+=1
			
		}
			
	}
}
